# wst2swst

./: Dockerfile  LICENSE  Makefile  Repl.ipynb  Simply Wall St - Example Import transactions.csv  build.sh  poetryw  pyproject.toml  pythonw
