[tool.poetry]
name = "wst2swst"
version = "0.1.0"
description = "Downloads Wealthsimple Trade transactions into a spreadsheet format compatible with Simply Wall St portfolio import format"
authors = ["Alexei Guevara"]
license = "MIT Licence"

[tool.poetry.dependencies]
python = "^3.10"
wealthsimple-trade-python = "^1.1.0"

[tool.poetry.dev-dependencies]
# pytest = "^6.2.5"
# pytest-cov = "^3.0.0"
# black = "^21.9b0"
# isort = "^5.9.3"
# flake8 = "^4.0.1"
# bandit = "^1.7.0"
# safety = "^1.10.3"
jupyterlab = "^3.2.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
